@@ -58,6 +58,8 @@ Extension Modules
 Tests
 -----
 
+- test_mailbox should now work on cygwin versions 2006-08-10 and later.
+
 - Bug #1535182: really test the xreadlines() method of bz2 objects.
 
 - test_threading now skips testing alternate thread stack sizes on
